feat(procurement): add procurement lifecycle notifications